dark mode h1 portfolio fixed

--- a/src/components/PortfolioSection/PortfolioSection.css
+++ b/src/components/PortfolioSection/PortfolioSection.css
@@ -32,7 +32,7 @@
 }
 
 .portfolio-section h1{
-  font-size: 64px;
+  font-size: 64px;  
 
 }
 
@@ -41,7 +41,7 @@
 }
 
 .portfolio-title-2{
-  color: var(--color-b500);
+  color: var(--color-b500-wdark);
 }
 
 .project{
